--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-countup": "6.1.0",
     "react-dom": "17.0.2",
     "react-flatpickr": "3.10.7",
+    "react-p5": "^1.3.33",
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "15.4.5",
