--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Material Kit",
-  "name": "Material Kit 2 React",
+  "short_name": "Daniel Hong",
+  "name": "Daniel Hong Portfolio",
   "icons": [
     {
       "src": "favicon.png",
