Added code editor component

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/cache": "11.4.0",
     "@emotion/react": "11.4.1",
     "@emotion/styled": "11.3.0",
+    "@monaco-editor/react": "^4.4.6",
     "@mui/icons-material": "5.2.0",
     "@mui/material": "5.2.0",
     "@mui/styled-engine": "5.2.0",
