--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "6.0.2",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "15.4.5",
+    "uuidv4": "^6.2.13",
     "web-vitals": "1.0.1"
   },
   "scripts": {
