--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@emotion/cache": "11.10.7",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
-    "@monaco-editor/react": "^4.5.0",
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.0",
     "@mui/styled-engine": "5.12.0",
@@ -26,12 +25,14 @@
     "@testing-library/user-event": "14.4.3",
     "chroma-js": "2.4.2",
     "flatpickr": "4.6.13",
+    "monaco-editor": "^0.37.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-countup": "6.4.2",
     "react-dom": "18.2.0",
     "react-flatpickr": "3.10.13",
+    "react-monaco-editor": "^0.52.0",
     "react-p5": "^1.3.35",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
