--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "axios": "^1.4.0",
     "chroma-js": "2.4.2",
+    "dayjs": "^1.11.7",
     "flatpickr": "4.6.13",
+    "jwt-decode": "^3.1.2",
     "monaco-editor": "^0.37.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
