--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "prettify": "prettier --write ."
@@ -73,6 +73,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.2",
+    "@babel/preset-react": "^7.22.0",
+    "babel-jest": "^29.5.0",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
@@ -81,6 +84,8 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^5.0.0",
-    "prettier": "2.8.7"
+    "jest": "^29.5.0",
+    "prettier": "2.8.7",
+    "react-test-renderer": "^18.2.0"
   }
 }
