--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.0",
     "@mui/styled-engine": "5.12.0",
-    "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "axios": "^1.4.0",
@@ -49,15 +48,14 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "jest",
+    "test": "SET NODE_ENV=test&&mocha --require @babel/register --require ignore-styles src/test/*.test.js -r jsdom-global/register",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "prettify": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -73,9 +71,17 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.22.3",
     "@babel/preset-env": "^7.22.2",
     "@babel/preset-react": "^7.22.0",
-    "babel-jest": "^29.5.0",
+    "@babel/register": "^7.21.0",
+    "babel-plugin-inline-react-svg": "^2.0.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "chai": "^4.3.7",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "cheerio": "^1.0.0-rc.12",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
@@ -84,8 +90,12 @@
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^5.0.0",
-    "jest": "^29.5.0",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "22.1.0",
+    "jsdom-global": "3.0.2",
+    "mocha": "^10.2.0",
     "prettier": "2.8.7",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "tsconfig-paths": "^4.2.0"
   }
 }
