--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "SET NODE_ENV=test&&mocha --require @babel/register --require ignore-styles src/test/*.test.js -r jsdom-global/register",
+    "test": "jest",
     "eject": "react-scripts eject",
     "lint": "eslint ./src",
     "prettify": "prettier --write ."
@@ -71,17 +71,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.22.3",
     "@babel/preset-env": "^7.22.2",
-    "@babel/preset-react": "^7.22.0",
-    "@babel/register": "^7.21.0",
-    "babel-plugin-inline-react-svg": "^2.0.2",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "chai": "^4.3.7",
-    "chai-enzyme": "^1.0.0-beta.1",
-    "cheerio": "^1.0.0-rc.12",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.7",
+    "@babel/preset-react": "^7.22.3",
+    "babel-jest": "^29.5.0",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-import": "2.27.5",
@@ -91,11 +83,19 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "gh-pages": "^5.0.0",
     "ignore-styles": "^5.0.1",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "jsdom": "22.1.0",
     "jsdom-global": "3.0.2",
-    "mocha": "^10.2.0",
     "prettier": "2.8.7",
     "react-test-renderer": "^18.2.0",
     "tsconfig-paths": "^4.2.0"
+  },
+  "jest": {
+    "moduleDirectories": [
+      "node_modules",
+      "src"
+    ],
+    "testEnvironment": "jsdom"
   }
 }
