--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.2",
     "@babel/preset-react": "^7.22.3",
+    "axios-mock-adapter": "^1.21.4",
     "babel-jest": "^29.5.0",
     "eslint": "8.38.0",
     "eslint-config-prettier": "8.8.0",
