--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -21,12 +21,15 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
 
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    
+    - run: npm ci
     
     - name: Install dependencies
       run: npm install
@@ -35,10 +38,10 @@ jobs:
       run: npm test -- --coverage
     
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v1
+      uses: codecov/codecov-action@v3
     
     - name: Build
-      run: npm run build
+      run: npm run build --if-present
     
     - name: Deploy
       run: |
