--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: CI/CD
+name: React CI
 
 on:
   push:
@@ -47,9 +47,7 @@ jobs:
       run: |
         git config --global user.name $user_name
         git config --global user.email $user_email
-        PAT=${github_token}
-        AUTH=$(echo -n "x-access-token:$PAT" | openssl base64 | tr -d '\n')
-        git remote set-url origin https://${AUTH}@github.com/${repository}
+        git remote set-url origin https://x-access-token:${github_token}@github.com/${repository}
         npm run deploy
       env:
         user_name: 'github-actions[bot]'
