--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -45,8 +45,8 @@ jobs:
     
     - name: Deploy
       run: |
-        git config --global user.name $user_name
-        git config --global user.email $user_email
+        git config --global user.name ${user_name}
+        git config --global user.email ${user_email}
         git remote set-url origin https://x-access-token:${github_token}@github.com/${repository}
         npm run deploy
       env:
