--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -35,6 +35,7 @@ jobs:
       run: |
         git config --global user.name $user_name
         git config --global user.email $user_email
+        git remote set-url origin git@github.com:dhong9/dhong9.github.io.git
         npm run deploy
       env:
         user_name: 'github-actions[bot]'
