--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -2,7 +2,7 @@ name: Continuous Deployment (CD)
 
 on:
   workflow_run:
-    workflows: ["Build"]
+    workflows: ["Continuous Integration (CI)"]
     types: [completed]
     branches: [ "main" ]
 
