--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -35,9 +35,10 @@ jobs:
       run: |
         git config --global user.name $user_name
         git config --global user.email $user_email
-        git remote set-url origin git@github.com:dhong9/dhong9.github.io.git
+        git remote set-url origin https://${GITHUB_TOKEN}@github.com/${repository}
         npm run deploy
       env:
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
         GITHUB_TOKEN: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+        repository: ${{ github.repository }}
