--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -37,6 +37,8 @@ jobs:
         git config --global user.email $user_email
         git remote set-url origin git@github.com:dhong9/dhong9.github.io.git
         npm run deploy
+      with:
+        repo-token: ${GITHUB_TOKEN}
       env:
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
