Added token to CI

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -37,8 +39,6 @@ jobs:
         git config --global user.email $user_email
         git remote set-url origin git@github.com:dhong9/dhong9.github.io.git
         npm run deploy
-      with:
-        repo-token: ${GITHUB_TOKEN}
       env:
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
