Changed commit variable

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -36,7 +36,7 @@ jobs:
         git config --global user.name $user_name
         git config --global user.email $user_email
         git remote set-url origin https://${github_token}@github.com/${repository}
-        npm run deploy -- -m ${{ github.event.head_commit.message }}
+        npm run deploy -- -m ${{ ${{ github.event.commits[0].message }} }}
       env:
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
