Added Codecov token

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,8 @@
 name: Continuous Integration (CI)
 
+env:
+  CODECOV_TOKEN: '${{ secrets.CODECOV_TOKEN }}'
+
 on:
   push:
     branches: [ "main" ]
