--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-countup": "6.4.2",
     "react-dom": "18.2.0",
     "react-flatpickr": "3.10.13",
+    "react-markdown": "^8.0.7",
     "react-monaco-editor": "^0.52.0",
     "react-p5": "^1.3.35",
     "react-router-dom": "6.10.0",
@@ -95,7 +96,8 @@
   "jest": {
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js",
+      "react-markdown": "<rootDir>/node_modules/react-markdown/react-markdown.min.js"
     },
     "moduleDirectories": [
       "node_modules",
