--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "axios": "^1.4.0",
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.7",
+    "draft-js": "^0.11.7",
     "flatpickr": "4.6.13",
     "jwt-decode": "^3.1.2",
     "monaco-editor": "^0.37.1",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "5.1.0",
     "react-countup": "6.4.2",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-flatpickr": "3.10.13",
     "react-markdown": "^8.0.7",
     "react-monaco-editor": "^0.52.0",
