--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.4.0",
     "chroma-js": "2.4.2",
     "dayjs": "^1.11.7",
+    "dompurify": "^3.0.5",
+    "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "flatpickr": "4.6.13",
     "jwt-decode": "^3.1.2",
