--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.2",
     "@babel/preset-react": "^7.22.3",
+    "@testing-library/jest-dom": "^5.17.0",
     "axios-mock-adapter": "^1.21.4",
     "babel-jest": "^29.5.0",
     "eslint": "8.38.0",
