--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "draft-convert": "^2.1.13",
     "draft-js": "^0.11.7",
     "flatpickr": "4.6.13",
+    "html-react-parser": "^4.2.0",
     "jwt-decode": "^3.1.2",
     "monaco-editor": "^0.37.1",
     "prop-types": "15.8.1",
@@ -38,7 +39,6 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-flatpickr": "3.10.13",
-    "react-html-parser": "^2.0.2",
     "react-markdown": "^8.0.7",
     "react-monaco-editor": "^0.52.0",
     "react-p5": "^1.3.35",
