Incorporated AuthContext into BaseLayout test

--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
       "node_modules",
       "src"
     ],
-    "testEnvironment": "jsdom",
+    "testEnvironment": "jest-environment-jsdom",
     "testTimeout": 30000
   }
 }
