--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/material": "5.12.0",
     "@mui/styled-engine": "5.12.0",
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "axios": "^1.4.0",
