--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-flatpickr": "3.10.13",
+    "react-login-github": "^1.0.8",
     "react-markdown": "^8.0.7",
     "react-monaco-editor": "^0.52.0",
     "react-p5": "^1.3.35",
