--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "monaco-editor": "^0.37.1",
     "prop-types": "15.8.1",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-copy-to-clipboard": "5.1.0",
     "react-countup": "6.4.2",
     "react-dom": "^18.2.0",
