--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "url": "git+https://github.com/creativetimofficial/ct-material-kit-react.git"
   },
   "dependencies": {
+    "@dropzone-ui/react": "^7.0.4",
     "@emotion/cache": "11.10.7",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
@@ -41,7 +42,6 @@
     "react-countup": "6.4.2",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-dropzone": "^15.0.0",
     "react-flatpickr": "3.10.13",
     "react-markdown": "^8.0.7",
     "react-monaco-editor": "^0.52.0",
